@@ -1,3 +1,8 @@
+2011-03-07  Mike Frysinger  <vapier@gentoo.org>
+
+  * src/tap/cable/jim.c: Update get/set prototypes enough so that the code
+    will at least compile again.
+
 2011-02-24  Mike Frysinger  <vapier@gentoo.org>
 
   * src/tap/cable/ft2232.c: Rename user-facing cable string from
